--- a/HTML/Igor/HTML_ДЗ_3/index.html
+++ b/HTML/Igor/HTML_ДЗ_3/index.html
@@ -10,19 +10,39 @@
 <body>
     <header>
 
-        <h1 class=h1-main><img src="img/logo_3.png" alt="logo" class="logo"><p class="effect">Магазин сотовых телефонов</p>
-        <nav class="menu-list" align="left">
-            <a class="menu-link" href="contacts.html">Контакты</a>
-            <a class="menu-link" href="catalog/catalog.html">Каталог</a>
-            <a class="menu-link" href="">Регистрация</a>
-            <a class="menu-link" href="">Как нас найти</a>
-        </nav>
-                </h1>
-        <h2 class="h2-main">Ура, мы открылись. Салон сотовой связи ждёт вас по адресу г. Москва, бульвар Яна Райниса, дом 1. В продаже имеются сотовые телефоны, комплектующие, и многое другое. Без процентное пополнение счёта абонентов "Билайн". Работаем под заказ без переплаты. Ремонт сотовых телефонов, планшетов.
-        </h2>
-
-
+        <h1 class=h1-main><img src="img/logo_3.png" alt="logo" class="logo">
+            <p class="effect">Магазин сотовых телефонов - Mobile</p>
+            <nav class="menu-list" align="left">
+                <a class="menu-link" href="contacts.html">Контакты</a>
+                <a class="menu-link" href="catalog/catalog.html">Каталог</a>
+                <a class="menu-link" href="">Регистрация</a>
+                <a class="menu-link" href="">Как нас найти</a>
+            </nav>
+        </h1>
     </header>
 </body>
+<div class="line-one">
+    <div class="card-one">
+        <img src="img/mob_phones.jpg" alt="Mobiles store">
+        <div class="container">
+            <h4>Ура, мы открылись. Салон сотовой связи ждёт вас по адресу г. Москва, бульвар Яна Райниса, дом 1. В продаже имеются сотовые телефоны, комплектующие, и многое другое. Без процентное пополнение счёта абонентов "Билайн". Работаем под заказ без переплаты. Ремонт сотовых телефонов, планшетов.
+            </h4>
+        </div>
+    </div>
+    <div class="card-two">
+        <img src="img/technologies.png" alt="Mobiles store">
+        <div class="container">
+            <h4>Благодаря последним инновациям, обмен мгновенными сообщениями и сотовые телефоны стали повседневной жизнью, а их влияние сказалось на жизни общества. Изобретение сотовых телефонов во многом упростило жизнь, но возникли и такие проблемы, как проблемы со здоровьем и безопасность. Причина, по которой мобильные телефоны необходимы и важны, ясна: удобство. Это проще, эффективнее и намного быстрее, чем посещение человека, с которым вы хотите связаться, отправка письма или телеграммы или использование домашнего телефона.
+            </h4>
+        </div>
+    </div>
+    <div class="card-three">
+        <img src="img/mobile_1.jpg" alt="Mobiles store">
+        <div class="container">
+            <h4>Современные смартфоны оснащены большими сенсорными экранами, впечатляющими камерами и высокотехнологичными функциями, такими как 3D-распознавание лиц. Раньше телефоны в основном использовались для звонков, а теперь – для чего угодно: это и прослушивание музыки, и просмотр веб-страниц, и игры, и видео с котиками на YouTube. Если бы вы сказали, например, еще в 1999 году, на что эти устройства будут способны через 20 с лишним лет, вас бы назвали сумасшедшим. Это звучало бы как научная фантастика.
+            </h4>
+        </div>
+    </div>
+</div>
 
 </html>
