--- a/HTML/Igor/HTML_ДЗ_4/catalog/catalog.html
+++ b/HTML/Igor/HTML_ДЗ_4/catalog/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <header>
-    <h1 class=h1-main><img src="../img/logo_3.png" alt="logo" class="logo">
+    <div class=h1-main><img src="../img/logo_3.png" alt="logo" class="logo">
         <p class="effect">Каталог</p>
         <nav class="menu-list" align="left">
             <a class="menu-link" href="../index.html">Главная</a>
@@ -15,12 +15,79 @@
             <a class="menu-link" href="../registration.html">Регистрация</a>
             <a class="menu-link" href="../about_us.html">Как нас найти</a>
         </nav>
-    </h1>
+    </div>
 </header>
 
 <body>
+    <div class="goods-card">
+        <div class="intro">
+            <p>Samsung A52</p>
+        </div>
+        <div class="img">
+            <a href="#" class="img2"> </a>
+        </div>
+        <div class="discription">
+            <table class="table">
+                <caption>Основные характеристики</caption>
+                <tr>
+                    <td>цвет товара</td>
+                    <td>черный</td>
+                </tr>
+                <tr>
+                    <td>экран</td>
+                    <td>6.5" (2400x1080)</td>
+                </tr>
+                <tr>
+                    <td>встроенная память</td>
+                    <td>128 ГБ</td>
+                </tr>
+                <tr>
+                    <td>оперативная память</td>
+                    <td>4 ГБ</td>
+                </tr>
+                <tr>
+                    <td>камеры</td>
+                    <td>64 МП, 12 МП, 5 МП, 5 МП</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <table class="my-table">
+        <caption>Основные характеристики</caption>
+        <thead>
+            <tr>
+                <th>Харакетристика</th>
+                <th>Значение</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>цвет товара</td>
+                <td>черный</td>
+            </tr>
+            <tr>
+                <td>экран</td>
+                <td>6.5" (2400x1080)</td>
+            </tr>
+            <tr>
+                <td>встроенная память</td>
+                <td>128 ГБ</td>
+            </tr>
+            <tr>
+                <td>оперативная память</td>
+                <td>4 ГБ</td>
+            </tr>
+            <tr>
+                <td>камеры</td>
+                <td>64 МП, 12 МП, 5 МП, 5 МП</td>
+            </tr>
+        </tbody>
+    </table>
 
 
 </body>
+<footer>
+
+</footer>
 
 </html>
